--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
+@import url(header.css);
+@import url(research.css);
+@import url(functioning.css);
+@import url(restaurants.css);
+@import url(footer.css);
 
 * {
     box-sizing: border-box;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
-header {
-    display: flex;
-    justify-content: center;
-}
-
-header img {
-    margin-top: 15px;
-    width: 50%;
+.title {
+    font-family: 'Shrikhand', cursive;
+    color: white;
 }
