--- a/css/research.css
+++ b/css/research.css
@@ -18,13 +18,26 @@
 
 .title-research {
     text-align: center;
-    padding: 50px 50px 25px 50px;
+    padding: 40px 50px 25px 50px;
 }
 
-.title-research h3 {
+.title-research h2 {
     margin-bottom: 15px;
+}
+
+.subtitle-research {
+    font-size: 0.9em;
 }
 
 .button-research {
     padding-bottom: 40px;
+}
+
+.button-research button {
+    padding: 12px 17px 12px 17px;
+    border-radius: 20px 20px 20px 20px;
+    color: white;
+    border-style: none;
+    box-shadow: 1px 1px 5px grey;
+    background-color: #9356DC;
 }
