--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
-@import url(header.css);
-@import url(research.css);
-@import url(functioning.css);
-@import url(restaurants.css);
-@import url(footer.css);
+@import "./Utils/variables";
 
 * {
     font-family: 'Roboto', sans-serif;
