--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,75 @@
-@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap");
 * {
   font-family: "Roboto", sans-serif;
   box-sizing: border-box;
   margin: 0;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  padding: 30px 0px 15px 0px;
+}
+header img {
+  width: 50%;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #EAEAEA;
+  border-top: 3px solid #d1d1d1;
+  height: 50px;
+}
+form i {
+  padding-right: 5%;
+}
+
+input[type=search] {
+  background-color: #EAEAEA;
+  border: none;
+  font-weight: bold;
+}
+
+.research {
+  text-align: center;
+}
+.research__box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 100px 50px 50px 50px;
+  gap: 30px;
+  height: 300px;
+  background-color: #F6F6F6;
+}
+.research__btn button {
+  border: none;
+  height: 50px;
+  padding: 0px 25px 0px 25px;
+  margin-bottom: 60px;
+  border-radius: 25px 25px 25px 25px;
+  box-shadow: 3px 3px 3px grey;
+  color: white;
+  font-size: 1em;
+  font-weight: bold;
+  background-color: #9356DC;
+}
+.research h2 {
+  padding-bottom: 30px;
+}
+
+.functioning {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  gap: 30px;
+  height: 300px;
+}
+.functioningbtn-box {
+  display: flex;
+  flex-direction: column;
 }
 
 .title {
