--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,14 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
 @import "./Utils/variables";
-
-* {
-    font-family: 'Roboto', sans-serif;
-    box-sizing: border-box;
-    margin: 0;  
-}
+@import "./Base/base";
+@import "./Layout/header";
+@import "./Layout/form";
+@import "./Composants/research";
+@import "./Composants/functioning";
 
 .title {
-    font-family: 'Shrikhand', cursive;
+    font-family: $font-shrikhand;
     color: white;
 }
