--- a/sass/Utils/_variables.scss
+++ b/sass/Utils/_variables.scss
@@ -4,7 +4,12 @@ $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
 $color-research: #EAEAEA;
 $color-background: #F6F6F6;
+$color-hover-btn: #F5EDFF;
+$color-icon-off: #7E7E7E;
+$color-footer: #353535;
 
 //FONTS//
 $font-roboto: 'Roboto', sans-serif;
 $font-shrikhand: 'Shrikhand', cursive;
+
+
