--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,6 +30,32 @@ input[type=search] {
   border: none;
   font-weight: bold;
 }
+input[type=search]:active {
+  border: none;
+}
+
+footer {
+  margin-top: 60px;
+  padding-bottom: 20px;
+  background-color: #353535;
+  color: white;
+}
+footer h4 {
+  font-family: "Shrikhand", cursive;
+  font-weight: lighter;
+  font-size: 1.2em;
+  padding: 25px 0px 0px 20px;
+}
+footer ul {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  list-style: none;
+  padding: 20px;
+}
+footer li i {
+  padding-right: 10px;
+}
 
 .research {
   text-align: center;
@@ -50,11 +76,11 @@ input[type=search] {
   padding: 0px 25px 0px 25px;
   margin-bottom: 60px;
   border-radius: 25px 25px 25px 25px;
-  box-shadow: 3px 3px 3px grey;
   color: white;
   font-size: 1em;
   font-weight: bold;
   background-color: #9356DC;
+  box-shadow: 3px 3px 5px #D8D8D8;
 }
 .research h2 {
   padding-bottom: 30px;
@@ -63,13 +89,108 @@ input[type=search] {
 .functioning {
   display: flex;
   flex-direction: column;
-  padding: 20px;
   gap: 30px;
-  height: 300px;
+  height: 400px;
+  margin-top: 30px;
 }
-.functioningbtn-box {
+.functioning h2 {
+  font-weight: bold;
+  font-size: 1.3em;
+  padding: 20px 0px 0px 20px;
+}
+.functioning button {
+  border: none;
+  height: 70px;
+  width: 320px;
+  background-color: #F6F6F6;
+  border-radius: 25px 25px 25px 25px;
+  font-weight: bold;
+  font-size: 1em;
+  box-shadow: 3px 3px 5px #D8D8D8;
+}
+.functioning button:active {
+  background-color: #F5EDFF;
+}
+.functioning i {
+  position: absolute;
+  color: #7E7E7E;
+}
+.functioning__btn-box {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  gap: 30px;
+}
+.functioning__numbers {
+  width: 20px;
+  border: 1px solid #9356DC;
+  border-radius: 50%;
+  text-align: center;
+  color: white;
+  background-color: #9356DC;
+  position: absolute;
+  transform: translate(-40%, 115%);
+}
+.functioning .element-1 i {
+  transform: translate(240%, 125%);
+  font-size: 1.2em;
+}
+.functioning .element-2 i {
+  transform: translate(200%, 140%);
+  font-size: 1.15em;
+}
+.functioning .element-3 i {
+  transform: translate(170%, 130%);
+  font-size: 1.2em;
+}
+
+.restaurants {
+  display: flex;
+  flex-direction: column;
+  background-color: #F6F6F6;
+}
+.restaurants__title {
+  font-weight: bold;
+  padding: 20px 0px 0px 20px;
+  margin-top: 30px;
+}
+
+.cards {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  align-items: center;
+  gap: 20px;
+}
+
+.cards-rest {
+  background-color: white;
+  height: 250px;
+  width: 90%;
+  border-radius: 25px 25px 25px 25px;
+  box-shadow: 3px 3px 5px #D8D8D8;
+}
+.cards-rest__img {
+  object-fit: cover;
+  height: 70%;
+  width: 100%;
+  border-radius: 25px 25px 0px 0px;
+}
+.cards-rest__heart {
+  width: 8%;
+  height: 8%;
+  transform: translate(1070%, -160%);
+}
+.cards-rest__txt-box {
+  padding-left: 10px;
+  padding-top: 10px;
+  font-size: 1.1em;
+}
+.cards-rest a {
+  text-decoration: none;
+  color: black;
 }
 
 .title {
