--- a/sass/Composants/_functioning.scss
+++ b/sass/Composants/_functioning.scss
@@ -1,11 +1,66 @@
 .functioning {
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
+    @include flex-column;
     gap: 30px;
-    height: 300px;
-    &btn-box {
-        display: flex;
-        flex-direction: column;
+    height: 400px;
+    margin-top: 30px;
+    h2 {
+        font-weight: bold;
+        font-size: 1.3em;
+        padding: 20px 0px 0px 20px;
+    }
+    button {
+        border: none;
+        height: 70px;
+        width: 320px;
+        background-color: $color-background;
+        border-radius: 25px 25px 25px 25px;
+        font-weight: bold;
+        font-size: 1em;
+        @include button-shadow;
+        &:active {
+            background-color: $color-hover-btn;
+        }
+    }
+    i {
+        position: absolute;
+        color: $color-icon-off;
+    }
+    &__btn-box {
+        @include flex-column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        gap: 30px;
+    }
+    &__numbers {
+        width: 20px;
+        border: 1px solid $color-primary;
+        border-radius: 50%;
+        text-align: center;
+        color: white;
+        background-color: $color-primary;
+        position: absolute;
+        transform: translate(-40%, 115%);
+    }
+
+    .element-1 {
+        i {
+            transform: translate(240%, 125%);
+            font-size: 1.20em;
+        }
+    }
+
+    .element-2 {
+        i {
+            transform: translate(200%, 140%);
+            font-size: 1.15em;
+        }
+    }
+
+    .element-3 {
+        i {
+            transform: translate(170%, 130%);
+            font-size: 1.20em;
+        }
     }
 }
