--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,9 +1,12 @@
 @import "./Utils/variables";
+@import "./Utils/mixin";
 @import "./Base/base";
 @import "./Layout/header";
 @import "./Layout/form";
+@import "./Layout/footer";
 @import "./Composants/research";
 @import "./Composants/functioning";
+@import "./Composants/restaurants";
 
 .title {
     font-family: $font-shrikhand;
