--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,7 +35,6 @@ input[type=search]:active {
 }
 
 footer {
-  margin-top: 60px;
   padding-bottom: 20px;
   background-color: #353535;
   color: white;
@@ -161,6 +160,7 @@ footer li i {
   display: flex;
   flex-direction: column;
   margin-top: 20px;
+  padding-bottom: 70px;
   align-items: center;
   gap: 20px;
 }
