--- a/sass/Utils/_mixin.scss
+++ b/sass/Utils/_mixin.scss
@@ -11,3 +11,9 @@
     font-weight: bold;
     padding: 20px 0px 0px 20px;
 }
+
+@mixin funct-btn-box {
+    display: flex;
+    justify-content: center;
+    width: 95%;
+}
