--- a/sass/Composants/_restaurants.scss
+++ b/sass/Composants/_restaurants.scss
@@ -1,10 +1,10 @@
 .restaurants {
     @include flex-column;
     background-color: $color-background;
-    &__title {
-        @include title-format;
-        margin-top: 30px;
-    }
+        &__title {
+            @include title-format;
+            margin-top: 30px;
+        }
 }
 
 .cards {
@@ -21,25 +21,39 @@
     width: 90%;
     border-radius: 25px 25px 25px 25px;
     @include button-shadow;
-    &__img {
-        object-fit: cover;
-        height: 70%;
-        width: 100%;
-        border-radius: 25px 25px 0px 0px;
-    }
-    &__heart {
-        width: 8%;
-        height: 8%;
-        transform: translate(1070%, -160%);
-    }
-    &__txt-box {
-        padding-left: 10px;
-        padding-top: 10px;
-        font-size: 1.1em;
-    }
-    a {
-        text-decoration: none;
-        color: black;
-    }
+        &__img {
+            object-fit: cover;
+            height: 70%;
+            width: 100%;
+            border-radius: 25px 25px 0px 0px;
+        }
+        &__heart {
+            width: 8%;
+            height: 8%;
+            transform: translate(1070%, -160%);
+        }
+        &__txt-box {
+            padding-left: 10px;
+            padding-top: 10px;
+            font-size: 1.1em;
+        }
+        &__new {
+            height: 30px;
+            width: 80px;
+            font-size: 0.8em;
+            font-weight: bold;
+            line-height: 30px;
+            text-align: center;
+            background-color: $color-tertiary;
+            color: darken($color: $color-tertiary, $amount: 40%);
+            border-radius: 2px;
+            transform: translate(300%, -530%);
+            box-shadow: 2px 2px 6px grey;
+            position: absolute;
+        }
+        a {
+            text-decoration: none;
+            color: black;
+        }
 }
 
