--- a/sass/Composants/_restaurants.scss
+++ b/sass/Composants/_restaurants.scss
@@ -16,11 +16,11 @@
 }
 
 .cards-rest {
+    @include button-shadow;
     background-color: white;
     height: 250px;
     width: 90%;
     border-radius: 25px 25px 25px 25px;
-    @include button-shadow;
         &__img {
             object-fit: cover;
             height: 70%;
@@ -31,6 +31,9 @@
             width: 8%;
             height: 8%;
             transform: translate(1070%, -160%);
+            &:hover {
+                background: linear-gradient($color-primary, $color-secondary);
+            }
         }
         &__txt-box {
             padding-left: 10px;
@@ -47,9 +50,10 @@
             background-color: $color-tertiary;
             color: darken($color: $color-tertiary, $amount: 40%);
             border-radius: 2px;
-            transform: translate(300%, -530%);
             box-shadow: 2px 2px 6px grey;
             position: absolute;
+            transform: translate(0%, -540%);
+            margin-left: 240px;
         }
         a {
             text-decoration: none;
