--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,6 +114,9 @@ footer li i {
 .functioning button:active {
   background-color: #F5EDFF;
 }
+.functioning button:active + .element i {
+  color: #9356DC;
+}
 .functioning i {
   position: absolute;
   color: #7E7E7E;
@@ -228,6 +231,114 @@ footer li i {
 .cards-rest a {
   text-decoration: none;
   color: black;
+}
+
+.header-rest {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.header-rest__box {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.header-rest__box i {
+  font-size: 1.5em;
+  padding: 5px 310px 0px 0px;
+}
+.header-rest__logo {
+  position: absolute;
+}
+.header-rest__img {
+  margin-top: 25px;
+  width: 100%;
+  position: relative;
+  z-index: 0;
+}
+
+.menu {
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  position: relative;
+  background-color: #F6F6F6;
+  padding-left: 20px;
+  margin-top: -55px;
+  padding-bottom: 50px;
+}
+.menu__title {
+  display: flex;
+  flex-direction: row;
+}
+.menu__title h1 {
+  font-family: "Shrikhand", cursive;
+  font-size: 1.8em;
+  padding: 25px 30px 0px 0px;
+}
+.menu__heart {
+  padding-top: 25px;
+  width: 8%;
+}
+.menu__subtitle {
+  margin-top: 30px;
+  margin-bottom: 15px;
+  font-weight: 400;
+}
+.menu__subtitle:after {
+  content: "";
+  display: block;
+  position: relative;
+  width: 12%;
+  border-bottom: 2px solid #99E2D0;
+  margin-top: 3px;
+}
+.menu__box {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin-bottom: 30px;
+}
+.menu__box--btn {
+  display: flex;
+  flex-direction: column;
+  height: 60px;
+  padding-top: 10px;
+  padding-left: 10px;
+}
+.menu__box--plat {
+  font-size: 1.4em;
+  font-weight: bold;
+}
+.menu__box--misc {
+  font-size: 1.1em;
+}
+.menu__box--prix {
+  margin-left: 285px;
+  margin-top: -18px;
+  font-weight: bold;
+}
+.menu__box button {
+  box-shadow: 3px 3px 5px #D8D8D8;
+  border: none;
+  background-color: white;
+  width: 95%;
+  border-radius: 15px;
+}
+
+.order {
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+}
+.order--btn {
+  box-shadow: 3px 3px 5px #D8D8D8;
+  height: 50px;
+  width: 180px;
+  border: none;
+  border-radius: 25px;
+  color: white;
+  font-size: 1em;
+  background: linear-gradient(to bottom right, #FF79DA, #9356DC);
 }
 
 /*# sourceMappingURL=style.css.map */
