--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,9 @@
 @import "./Layout/header";
 @import "./Layout/form";
 @import "./Layout/footer";
-@import "./Composants/research";
-@import "./Composants/functioning";
-@import "./Composants/restaurants";
+@import "./Pages/research";
+@import "./Pages/functioning";
+@import "./Pages/restaurants";
+@import "./Pages/header-rest";
+@import "./Pages/menu";
+@import "./Composants/order-btn";
