--- a/public/css/style.css
+++ b/public/css/style.css
@@ -329,6 +329,7 @@ footer li i {
   display: flex;
   justify-content: center;
   margin-top: 40px;
+  padding-right: 20px;
 }
 .order--btn {
   box-shadow: 3px 3px 5px #D8D8D8;
