--- a/sass/Composants/_order-btn.scss
+++ b/sass/Composants/_order-btn.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     margin-top: 40px;
+    padding-right: 20px;
     &--btn {
         @include button-shadow;
         height: 50px;
