Réalisation du html des 4 restaurants et leurs menu + bases du CSS

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -253,6 +253,8 @@ footer li i {
 .header-rest__img {
   margin-top: 25px;
   width: 100%;
+  height: 250px;
+  object-fit: cover;
   position: relative;
   z-index: 0;
 }
