--- a/sass/Pages/_header-rest.scss
+++ b/sass/Pages/_header-rest.scss
@@ -14,6 +14,8 @@
     &__img {
         margin-top: 25px;
         width: 100%;
+        height: 250px;
+        object-fit: cover;
         position: relative;
         z-index: 0;
     }
