--- a/sass/Utils/_variables.scss
+++ b/sass/Utils/_variables.scss
@@ -7,6 +7,8 @@ $color-background: #F6F6F6;
 $color-hover-btn: #F5EDFF;
 $color-icon-off: #7E7E7E;
 $color-footer: #353535;
+$color-shadow: #D8D8D8;
+$color-mix: linear-gradient(to bottom right, $color-secondary, $color-primary);
 
 //FONTS//
 $font-roboto: 'Roboto', sans-serif;
