--- a/sass/Composants/_order-btn.scss
+++ b/sass/Composants/_order-btn.scss
@@ -4,13 +4,16 @@
     margin-top: 40px;
     padding-right: 20px;
     &--btn {
-        @include button-shadow;
+        @include button-shadow($color-shadow);
         height: 50px;
         width: 180px;
         border: none;
         border-radius: 25px;
         color: white;
         font-size: 1em;
-        background: linear-gradient(to bottom right, $color-secondary, $color-primary);
+        background: $color-mix;
+        &:hover {
+            @include color-swap;
+        }
     }
 }
