--- a/sass/Pages/_research.scss
+++ b/sass/Pages/_research.scss
@@ -10,7 +10,7 @@
         background-color: $color-background;
     }
     &__btn button{
-        @include button-shadow;
+        @include button-shadow ($color-shadow);
         border: none;
         height: 50px;
         padding: 0px 25px 0px 25px;
@@ -19,7 +19,10 @@
         color: white;
         font-size: 1em;
         font-weight: bold;
-        background: linear-gradient(to bottom right, $color-secondary, $color-primary);
+        background: $color-mix;
+        &:hover {
+            @include color-swap;
+        }
     }
     h2 {
         padding-bottom: 30px;
