--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,25 @@
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+    transform-origin: bottom;
+    transform: translateY(15px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+@keyframes heart-fill-up {
+  from {
+    transform-origin: bottom;
+    transition-property: color;
+    transform: scaleY(0);
+  }
+  to {
+    color: #9356DC;
+    transform: scaleY(1);
+  }
+}
 * {
   font-family: "Roboto", sans-serif;
   box-sizing: border-box;
@@ -212,6 +234,7 @@ footer li i {
   height: 250px;
   width: 90%;
   border-radius: 25px 25px 25px 25px;
+  position: relative;
 }
 .cards-rest__img {
   object-fit: cover;
@@ -219,26 +242,31 @@ footer li i {
   width: 100%;
   border-radius: 25px 25px 0px 0px;
 }
-.cards-rest__title, .cards-rest__subtitle {
-  width: 50%;
-}
 .cards-rest__txt-box {
-  padding-left: 10px;
-  padding-top: 10px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 10px 0px 0px 10px;
   font-size: 1.1em;
 }
 .cards-rest__txt-box i {
-  position: relative;
-  bottom: 35px;
-  left: 280px;
+  position: absolute;
+  align-self: flex-end;
+  line-height: 0;
   font-size: 1.2em;
+  margin: 20px 20px 0px 0px;
   color: white;
-  -webkit-text-stroke: 2px black;
+  text-shadow: 0 0 3px #000;
+}
+.cards-rest__txt-box i:hover {
+  animation-name: heart-fill-up;
+  animation-duration: 1000ms;
+  animation-fill-mode: forwards;
 }
 .cards-rest__new {
   height: 30px;
   width: 80px;
-  font-size: 0.8em;
+  font-size: 0.7em;
   font-weight: bold;
   line-height: 30px;
   text-align: center;
@@ -247,8 +275,9 @@ footer li i {
   border-radius: 2px;
   box-shadow: 2px 2px 6px grey;
   position: absolute;
-  transform: translate(0%, -540%);
-  margin-left: 240px;
+  align-self: flex-end;
+  margin-top: -170px;
+  margin-right: 20px;
 }
 .cards-rest a {
   text-decoration: none;
@@ -301,7 +330,7 @@ footer li i {
 }
 .menu__heart {
   padding-top: 25px;
-  width: 8%;
+  width: 24px;
 }
 .menu__subtitle {
   margin-top: 30px;
@@ -326,8 +355,10 @@ footer li i {
   display: flex;
   flex-direction: column;
   height: 60px;
-  padding-top: 10px;
-  padding-left: 10px;
+  padding: 10px 0px 0px 10px;
+  animation-name: fade-in;
+  animation-duration: 2000ms;
+  animation-fill-mode: forwards;
 }
 .menu__box--plat {
   font-size: 1.4em;
@@ -335,10 +366,14 @@ footer li i {
 }
 .menu__box--misc {
   font-size: 1.1em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .menu__box--prix {
-  margin-left: 285px;
+  align-self: flex-end;
   margin-top: -18px;
+  padding-right: 25px;
   font-weight: bold;
 }
 .menu__box button {
