--- a/sass/Pages/_menu.scss
+++ b/sass/Pages/_menu.scss
@@ -16,7 +16,7 @@
     }
     &__heart {
         padding-top: 25px;
-        width: 8%;
+        width: 24px;
     }
     &__subtitle {
             margin-top: 30px;
@@ -39,8 +39,10 @@
             display: flex;
             flex-direction: column;
             height: 60px;
-            padding-top: 10px;
-            padding-left: 10px;
+            padding: 10px 0px 0px 10px;
+            animation-name: fade-in;
+            animation-duration: 2000ms;
+            animation-fill-mode: forwards;
         }
         &--plat {
             font-size: 1.4em;
@@ -48,10 +50,14 @@
         }
         &--misc {
             font-size: 1.1em;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
         &--prix {
-            margin-left: 285px;
+            align-self: flex-end;
             margin-top: -18px;
+            padding-right: 25px;
             font-weight: bold;
         }
     }
