--- a/sass/Pages/_restaurants.scss
+++ b/sass/Pages/_restaurants.scss
@@ -21,32 +21,38 @@
     height: 250px;
     width: 90%;
     border-radius: 25px 25px 25px 25px;
+    position: relative;
         &__img {
             object-fit: cover;
             height: 70%;
             width: 100%;
             border-radius: 25px 25px 0px 0px;
         }
-        &__title, &__subtitle {
-            width: 50%;
-        }
         &__txt-box {
-            padding-left: 10px;
-            padding-top: 10px;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            padding: 10px 0px 0px 10px;
             font-size: 1.1em;
             & i{
-                position: relative;
-                bottom: 35px;
-                left: 280px;
+                position: absolute;
+                align-self: flex-end;
+                line-height: 0;
                 font-size: 1.2em;
+                margin: 20px 20px 0px 0px;
                 color: white;
-                -webkit-text-stroke: 2px black;
+                text-shadow: 0 0 3px #000;
+                &:hover {
+                    animation-name: heart-fill-up;
+                    animation-duration: 1000ms;
+                    animation-fill-mode: forwards;
+                }
             }
         }
         &__new {
             height: 30px;
             width: 80px;
-            font-size: 0.8em;
+            font-size: 0.7em;
             font-weight: bold;
             line-height: 30px;
             text-align: center;
@@ -55,8 +61,9 @@
             border-radius: 2px;
             box-shadow: 2px 2px 6px grey;
             position: absolute;
-            transform: translate(0%, -540%);
-            margin-left: 240px;
+            align-self: flex-end;
+            margin-top: -170px;
+            margin-right: 20px;
         }
         a {
             text-decoration: none;
