--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,66 @@
+.menu__box button:nth-child(1) {
+  animation-delay: 0.3s;
+}
+
+.menu__box button:nth-child(2) {
+  animation-delay: 0.6s;
+}
+
+.menu__box button:nth-child(3) {
+  animation-delay: 0.9s;
+}
+
+.menu__box button:nth-child(4) {
+  animation-delay: 1.2s;
+}
+
+.menu__box button:nth-child(5) {
+  animation-delay: 1.5s;
+}
+
+.menu__box button:nth-child(6) {
+  animation-delay: 1.8s;
+}
+
+.menu__box button:nth-child(7) {
+  animation-delay: 2.1s;
+}
+
+.menu__box button:nth-child(8) {
+  animation-delay: 2.4s;
+}
+
+.menu__box button:nth-child(9) {
+  animation-delay: 2.7s;
+}
+
+@keyframes loading {
+  0% {
+    opacity: 0.1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes loading-bar {
+  0% {
+    width: 0%;
+  }
+  17% {
+    width: 10%;
+  }
+  24% {
+    width: 32%;
+  }
+  46% {
+    width: 73%;
+    opacity: 1;
+  }
+  100% {
+    width: 100%;
+    opacity: 0;
+  }
+}
 @keyframes fade-in {
   0% {
     opacity: 0;
@@ -12,12 +75,10 @@
 @keyframes heart-fill-up {
   from {
     transform-origin: bottom;
-    transition-property: color;
-    transform: scaleY(0);
+    opacity: 0;
   }
   to {
-    color: #9356DC;
-    transform: scaleY(1);
+    opacity: 1;
   }
 }
 * {
@@ -208,6 +269,33 @@ footer li i {
   font-size: 1.2em;
 }
 
+header, .research, .functioning, .restaurants, footer {
+  position: relative;
+  animation-name: loading;
+  animation-duration: 6000ms;
+}
+
+#progress {
+  overflow: hidden;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  height: 3vh;
+}
+#progress__bar {
+  opacity: 1;
+  height: 3vh;
+  background: linear-gradient(to left, #FF79DA, #9356DC);
+  border-radius: 25px 25px 25px 25px;
+  position: fixed;
+  z-index: 1;
+  animation-name: loading-bar;
+  animation-duration: 3500ms;
+  animation-fill-mode: forwards;
+}
+
 .restaurants {
   display: flex;
   flex-direction: column;
@@ -261,7 +349,6 @@ footer li i {
 .cards-rest__txt-box i:hover {
   animation-name: heart-fill-up;
   animation-duration: 1000ms;
-  animation-fill-mode: forwards;
 }
 .cards-rest__new {
   height: 30px;
@@ -292,14 +379,16 @@ footer li i {
 .header-rest__box {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
+  width: 100%;
 }
 .header-rest__box i {
   font-size: 1.5em;
-  padding: 5px 310px 0px 0px;
+  padding-top: 5px;
+  padding-left: 10px;
 }
-.header-rest__logo {
-  position: absolute;
+.header-rest__box img {
+  margin-right: 90px;
 }
 .header-rest__img {
   margin-top: 25px;
@@ -354,27 +443,31 @@ footer li i {
 .menu__box--btn {
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   height: 60px;
   padding: 10px 0px 0px 10px;
+  opacity: 0;
   animation-name: fade-in;
   animation-duration: 2000ms;
   animation-fill-mode: forwards;
 }
+.menu__box--content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 .menu__box--plat {
   font-size: 1.4em;
   font-weight: bold;
+  align-self: flex-start;
 }
 .menu__box--misc {
   font-size: 1.1em;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 .menu__box--prix {
-  align-self: flex-end;
-  margin-top: -18px;
-  padding-right: 25px;
   font-weight: bold;
+  align-self: flex-end;
+  padding-right: 20px;
 }
 .menu__box button {
   box-shadow: 3px 3px 5px #D8D8D8;
