--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,11 +50,18 @@
     width: 10%;
   }
   24% {
-    width: 32%;
+    width: 20%;
   }
   46% {
-    width: 73%;
+    width: 47%;
     opacity: 1;
+  }
+  85% {
+    width: 88%;
+    opacity: 0.3;
+  }
+  95% {
+    opacity: 0.1;
   }
   100% {
     width: 100%;
@@ -269,7 +276,7 @@ footer li i {
   font-size: 1.2em;
 }
 
-header, .research, .functioning, .restaurants, footer {
+.loading_header, .research, .functioning, .restaurants, .loading_footer {
   position: relative;
   animation-name: loading;
   animation-duration: 6000ms;
@@ -281,7 +288,7 @@ header, .research, .functioning, .restaurants, footer {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 80%;
+  width: 90%;
   height: 3vh;
 }
 #progress__bar {
@@ -289,11 +296,17 @@ header, .research, .functioning, .restaurants, footer {
   height: 3vh;
   background: linear-gradient(to left, #FF79DA, #9356DC);
   border-radius: 25px 25px 25px 25px;
-  position: fixed;
   z-index: 1;
   animation-name: loading-bar;
-  animation-duration: 3500ms;
+  animation-duration: 3000ms;
   animation-fill-mode: forwards;
+}
+#progress__bar p {
+  font-weight: bold;
+  font-size: 1em;
+  padding-left: 20px;
+  font-family: "Roboto", sans-serif;
+  color: white;
 }
 
 .restaurants {
