--- a/sass/Pages/_restaurants.scss
+++ b/sass/Pages/_restaurants.scss
@@ -1,4 +1,5 @@
-header, .research, .functioning, .restaurants, footer{
+// ANIMATION BARRE DE CHARGEMENT //
+.loading_header, .research, .functioning, .restaurants, .loading_footer{
     position: relative;
     animation-name: loading;
     animation-duration: 6000ms;
@@ -10,7 +11,7 @@ header, .research, .functioning, .restaurants, footer{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 80%;
+    width: 90%;
     height: 3vh;
 
     &__bar {
@@ -18,14 +19,22 @@ header, .research, .functioning, .restaurants, footer{
         height: 3vh;
         background: linear-gradient(to left, $color-secondary, $color-primary);
         border-radius: 25px 25px 25px 25px;
-        position: fixed;
         z-index: 1;
         animation-name: loading-bar;
-        animation-duration: 3500ms;
+        animation-duration: 3000ms;
         animation-fill-mode: forwards;
+
+        & p {
+            font-weight: bold;
+            font-size: 1em;
+            padding-left: 20px;
+            font-family: $font-roboto;
+            color: white;
+        }
     }  
 }
 
+// BLOCS DE PAGE // 
 .restaurants {
     @include flex-column;
     background-color: $color-background;
