--- a/sass/Utils/_keyframes.scss
+++ b/sass/Utils/_keyframes.scss
@@ -15,11 +15,18 @@
         width: 10%;
     }
     24% {
-        width: 32%;
+        width: 20%;
     }
     46% {
-        width: 73%;
+        width: 47%;
         opacity: 1;
+    }
+    85% {
+        width: 88%;
+        opacity: 0.30;
+    }
+    95% {
+        opacity: 0.10;
     }
     100% {
         width: 100%;
