--- a/sass/Pages/_menu.scss
+++ b/sass/Pages/_menu.scss
@@ -38,9 +38,8 @@
         &--btn {
             display: flex;
             flex-direction: column;
-            justify-content: flex-start;
             height: 60px;
-            padding: 10px 0px 0px 10px;
+            padding: 10px 20px 0px 10px;
             opacity: 0;
             animation-name: fade-in;
             animation-duration: 2000ms;
@@ -50,6 +49,7 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;   
+            width: 100%;
         }
         &--plat {
             font-size: 1.4em;
@@ -62,7 +62,6 @@
         &--prix {
             font-weight: bold;
             align-self: flex-end;
-            padding-right: 20px;
         }
     }
     &__box button {
