--- a/sass/Pages/_restaurants.scss
+++ b/sass/Pages/_restaurants.scss
@@ -2,36 +2,20 @@
 .loading_header, .research, .functioning, .restaurants, .loading_footer{
     position: relative;
     animation-name: loading;
-    animation-duration: 6000ms;
+    animation-duration: 5s;
 }
 
 #progress {
     overflow: hidden;
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 90%;
-    height: 3vh;
-
-    &__bar {
-        opacity: 1;
-        height: 3vh;
-        background: linear-gradient(to left, $color-secondary, $color-primary);
-        border-radius: 25px 25px 25px 25px;
-        z-index: 1;
-        animation-name: loading-bar;
-        animation-duration: 3000ms;
-        animation-fill-mode: forwards;
-
-        & p {
-            font-weight: bold;
-            font-size: 1em;
-            padding-left: 20px;
-            font-family: $font-roboto;
-            color: white;
-        }
-    }  
+    border: 16px solid #f3f3f3; 
+    border-top: 16px solid $color-secondary; 
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear forwards;
+    top: 40%;
+    left: 35%;
 }
 
 // BLOCS DE PAGE // 
