--- a/sass/Utils/_keyframes.scss
+++ b/sass/Utils/_keyframes.scss
@@ -7,6 +7,17 @@
     }  
 }
 
+@keyframes spin {
+    0% { 
+        transform: rotate(0deg); 
+        opacity: 1;
+    }
+    100% { 
+        transform: rotate(360deg); 
+        opacity: 0;
+    }
+  }
+
 @keyframes loading-bar {
     0% {
         width: 0%;
