--- a/public/css/style.css
+++ b/public/css/style.css
@@ -301,8 +301,10 @@ footer li i {
   width: 120px;
   height: 120px;
   animation: spin 2s linear forwards;
+  margin: 5% auto;
   top: 40%;
-  left: 35%;
+  left: 0;
+  right: 0;
 }
 
 .restaurants {
