--- a/sass/Pages/_functioning.scss
+++ b/sass/Pages/_functioning.scss
@@ -1,14 +1,17 @@
+// BLOC FONCTIONNEMENT //
 .functioning {
     @include flex-column;
     gap: 30px;
     height: 400px;
     width: 100%;
     margin-top: 30px;
+        //TITRE//
         h2 {
             font-weight: bold;
             font-size: 1.3em;
             padding: 20px 0px 0px 20px;
         }
+        //BOUTONS//
         button {
             @include button-shadow ($color-shadow);
             border: none;
@@ -25,6 +28,7 @@
                 }
             }
         }
+        //CONTENEUR DES BOUTONS//
         &__btn-box {
             @include flex-column;
             align-items: center;
@@ -32,6 +36,7 @@
             width: 100%;
             gap: 30px;
         }
+        //NUMEROS//
         &__numbers {
             width: 20px;
             border: 1px solid $color-primary;
@@ -40,17 +45,18 @@
             color: white;
             background-color: $color-primary;
             margin-left: -15px;
-
         }
+        //ICONES//
         i {
             color: $color-icon-off;
             margin-left: 8%;
         }
+        //TEXTES BOUTONS//
         h4 {
             flex-grow: 4;
             margin-right: 15%;
         }
-
+    //TAILLES ICONES//
     .element-1 {
         @include btn-box-center;
             i {
