--- a/sass/Utils/_keyframes.scss
+++ b/sass/Utils/_keyframes.scss
@@ -18,33 +18,6 @@
     }
   }
 
-@keyframes loading-bar {
-    0% {
-        width: 0%;
-    }
-    17% {
-        width: 10%;
-    }
-    24% {
-        width: 20%;
-    }
-    46% {
-        width: 47%;
-        opacity: 1;
-    }
-    85% {
-        width: 88%;
-        opacity: 0.30;
-    }
-    95% {
-        opacity: 0.10;
-    }
-    100% {
-        width: 100%;
-        opacity: 0;
-    }
-}
-
 @keyframes fade-in {
     0% {
         opacity: 0;
@@ -57,12 +30,20 @@
     }
 }
 
-@keyframes heart-fill-up {
+@keyframes check-in {
     from {
-        transform-origin: bottom;
-        opacity: 0;
+        width: 0%;
     }
     to {
-        opacity: 1;
+        width: 20%;
+    }
+}
+
+@keyframes check-rotate {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
     }
 }
